apps/support/wordpress/base/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: wordpress
          image: wordpress:6.6-apache
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: php-fpm
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
          volumeMounts:
            - name: wp-data
              mountPath: /var/www/html
      volumes:
        - name: wp-data
          persistentVolumeClaim:
            claimName: wp-data
