apps/support/wordpress/base/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: wordpress
spec:
  selector:
    app.kubernetes.io/name: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  clusterIP: None
