apps/support/wordpress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.taberg.info        
      secretName: wordpress-tls
  rules:
    - host: www.taberg.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
